# rock

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  premake5.lua  rustfmt.toml
rock_core/: Cargo.toml  build.rs
rock_core/src/: arena.rs  ast.rs  bitset.rs  config.rs  error.rs  error2.rs  errors.rs  fs_env.rs  hir.rs  intern.rs  ir.rs  lexer.rs  lib.rs  macros.rs  support.rs  syntax.rs  temp_buffer.rs  text.rs  timer.rs  token.rs  vfs.rs
rock_core/src/ast/: mod.rs
rock_core/src/ast_parse/: grammar.rs  mod.rs  parser.rs
rock_core/src/codegen/: context.rs  emit_expr.rs  emit_mod.rs  emit_stmt.rs  llvm.rs  mod.rs
rock_core/src/codegen_ll/: mod.rs
rock_core/src/format/: mod.rs
rock_core/src/hir/: intern.rs  mod.rs
rock_core/src/hir_lower/: attr_check.rs  check_directive.rs  check_match.rs  check_path.rs  context.rs  errors.rs  hir_build.rs  hir_builder.rs  layout.rs  match_check.rs  mod.rs  pass_1.rs  pass_2.rs  pass_3.rs  pass_4.rs  pass_5.rs  pass_6.rs  proc_scope.rs  scope.rs  types.rs
rock_core/src/hir_lower/constant/: deps.rs  fold.rs  mod.rs  (+1 more)
rock_core/src/lexer/: grammar.rs  lexer.rs  mod.rs
rock_core/src/package/: manifest.rs  mod.rs  registry.rs  resolver.rs  semver.rs
rock_core/src/session/: config.rs  graph.rs  manifest.rs  mod.rs  vfs.rs
rock_core/src/session_2/: graph.rs  mod.rs  vfs.rs
rock_core/src/syntax/: ast_build.rs  ast_layer.rs  format.rs  grammar.rs  lexer.rs  mod.rs  parser.rs  syntax_kind.rs  syntax_tree.rs  token.rs  token_set.rs  tree.rs
rock_core/src/token/: mod.rs  token_gen.rs  token_list.rs
(+292 files in other folders)
